Bug 439268 - Typing text in the search bar sends data although suggestions are disabled
Summary: Typing text in the search bar sends data although suggestions are disabled
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.1.0
Platform: FreeBSD Ports FreeBSD
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-06-28 17:05 UTC by bsduck
Modified: 2022-10-18 20:43 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bsduck 2021-06-28 17:05:15 UTC
SUMMARY
With automatic suggestions disabled, typing text in a search bar should not send any data to the search engine before the search is actually launched (by pressing the Enter key or clicking on the search icon). This works as expected when performing searches from the URL bar. Unfortunately, this isn't the case with the dedicated search bar, which will invariably send data whenever you type something in it, be suggestions enabled or not.

STEPS TO REPRODUCE
1. Disable suggestions in the search bar
2. Monitor network traffic with e.g. Wireshark
3. Type some text in the search bar

OBSERVED RESULT
Data is sent to the search engine.

EXPECTED RESULT
Nothing should happen.

SOFTWARE/OS VERSIONS
Falkon 3.1.0
Qt 5.15.2
FreeBSD 13.0
Comment 1 Juraj 2022-08-12 04:59:55 UTC
Confirmed.
The suggestions from search engine are JUST not displayed while the search engine is always being contacted.
Comment 2 Juraj 2022-09-10 09:39:24 UTC
Git commit f5350dbe41cc4c6dfc513b7d50a09b8099d1fa2e by Juraj Oravec.
Committed on 10/09/2022 at 09:10.
Pushed by jurajo into branch 'master'.

Searchbar: Fix show suggestions handling

Do not contact search engine when suggestions are disabled.

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +13   -2    src/lib/navigation/websearchbar.cpp
M  +2    -0    src/lib/navigation/websearchbar.h

https://invent.kde.org/network/falkon/commit/f5350dbe41cc4c6dfc513b7d50a09b8099d1fa2e
Comment 3 Juraj 2022-09-10 09:42:58 UTC
Git commit f5bbdf24e178a7b97cceed27718da96a85629834 by Juraj Oravec.
Committed on 10/09/2022 at 09:42.
Pushed by jurajo into branch 'release/22.08'.

Searchbar: Fix show suggestions handling

Do not contact search engine when suggestions are disabled.

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>

M  +13   -2    src/lib/navigation/websearchbar.cpp
M  +2    -0    src/lib/navigation/websearchbar.h

https://invent.kde.org/network/falkon/commit/f5bbdf24e178a7b97cceed27718da96a85629834
Comment 4 bsduck 2022-10-18 20:43:03 UTC
Thank you Juraj for fixing!