Searchbar: Fix show suggestions handling

Do not contact search engine when suggestions are disabled.

BUG: 439268

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>